--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "eslint": "^8.33.0",
+    "prisma": "^4.9.0",
     "tsx": "^3.12.2",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "express": "^4.18.2"
   }
 }
